//
//  Platform.swift
//  GamerPower
//
//  Created by Hussein Kishk on 05/06/2024.
//

import Foundation

enum Platform: String, CaseIterable {
    case all = "all"
    case pc = "pc"
    case steam = "steam"
    case ios = "ios"
    case android = "android"
    case epicGamesStore = "epic-games-store"
}
