...
                VStack(alignment: .leading) {
                    Text("Explore \nGames Giveaways")
                        .font(.largeTitle)
                        .bold()
                        .padding(.top, 20)
                        .padding(.leading)
                        .accessibility(identifier: "GamesGiveawaysTitle")

                    HorizontalGiveawaysView(giveaways: $viewModel.epicGamesGiveaways, selectedGiveaway: $selectedGiveaway, isLoading: $viewModel.isLoadingHorizontal)

                    HStack {
                        ForEach(Platform.allCases.filter { $0 != .epicGamesStore }, id: \.self) { platform in
                            Text(platform.rawValue)
...
